--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -10,13 +10,13 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+<form class="row g-3 needs-validation" novalidate>
+  <div class="col-md-6">
     <%= form.label :title %>
     <%= form.text_field :title %>
   </div>
 
-  <div class="field">
+  <div class="col-md-8">
     <%= form.label :description %>
     <%= form.rich_text_area :description %>
   </div>
@@ -47,3 +47,4 @@
     <%= form.submit %>
   </div>
 <% end %>
+</form>
