--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+
 
 
     <!-- Required meta tags -->
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
 
 
-<div class=container>
+
 <h1>Listings</h1>
 <table class="table table-striped table-hover table-bordered">
   <thead class="table-dark">
@@ -24,7 +24,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-</div>
+
 
   <tbody>
     <% @listings.each do |listing| %>
@@ -36,10 +36,10 @@
         <td><%= listing.sold %></td>
         <td><%= listing.user_id %></td>
         <td><%= listing.category_id %></td>
-        <td><%= link_to 'Show', listing, class: "button" %></td>
+        <td><%= link_to 'Show', listing, class: "btn btn-outline-secondary" %></td>
         <% if current_user && current_user.id == listing.user_id %>
-          <td><%= link_to 'Edit', edit_listing_path(listing), class: "button" %></td>
-          <td><%= link_to 'Destroy', listing, class: "button", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-outline-secondary " %></td>
+          <td><%= link_to 'Destroy', listing, class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
@@ -48,4 +48,4 @@
 
 <br>
 
-<%= link_to 'New Listing', new_listing_path, class: "btn btn-secondary" %>
+<%= link_to 'New Listing', new_listing_path, class: "btn btn-secondary btn text-bg-dark" %>
