--- a/app/views/orders/sold.html.erb
+++ b/app/views/orders/sold.html.erb
@@ -7,8 +7,8 @@
 
 <h1>Sold orders</h1>
 
-<table>
-  <thead>
+<table class="table table-striped table-hover table-bordered">
+  <thead class="table-dark">
     <tr>
       <th>Title</th>
       <th>Description</th>
