--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -32,14 +32,14 @@
         <form class="d-flex" role="sign">
         <% if user_signed_in? %>
         <li class="nav-item">
-              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-secondary btn-padding-x:5" %>
+              <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn text-bg-dark btn-secondary btn-padding-x:5" %>
         </li>
         <% else %>
         <li class="nav-item">
-          <a class="nav-link text-bg-dark p-3" href="/users/sign_in">Sign In</a>
+          <a class="btn text-bg-dark btn-secondary btn-padding-x:5" href="/users/sign_in">Sign In</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-bg-dark p-3" href="/users/sign_up">Sign Up</a>
+          <a class="btn text-bg-dark btn-secondary btn-padding-x:5" href="/users/sign_up">Sign Up</a>
         </li>
         <% end %>
         </form>
