--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -47,7 +47,7 @@
   </div>
   </div>
     </div>
-  <%# </div> %>
-
+<% if current_user && current_user.id == @listing.user_id %>
 <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-secondary btn text-bg-dark" %>
+<% end %>
 <%= link_to 'Back', listings_path, class: "btn btn-secondary btn text-bg-dark" %>
