Further design work

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-<form class="row g-3 needs-validation" novalidate>
+<form class="row g-3 needs-validation">
   <div class="col-md-6">
     <%= form.label :title %>
     <%= form.text_field :title %>
@@ -48,3 +48,4 @@
   </div>
 <% end %>
 </form>
+
