--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Listing</h1>
+
+<div class="card w-90">
+  <div class="card-body">
+    <h3 class="card-title">Create a listing</h3>
 
 <%= render 'form', listing: @listing %>
 
 <%= link_to 'Back', listings_path, class: 'btn text-bg-dark' %>
+  </div>
+</div>
