--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with(model: listing) do |form| %>
   <% if listing.errors.any? %>
     <div id="error_explanation">
@@ -10,13 +11,13 @@
       </ul>
     </div>
   <% end %>
-<form class="row g-3 needs-validation">
-  <div class="col-md-6">
+
+  <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title  %>
   </div>
 
-  <div class="col-md-8">
+  <div class="field">
     <%= form.label :description %>
     <%= form.rich_text_area :description %>
   </div>
@@ -47,5 +48,4 @@
     <%= form.submit %>
   </div>
 <% end %>
-</form>
 
