--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -11,11 +11,17 @@
       </ul>
     </div>
   <% end %>
-
+<form class="row g-3 needs-validation" novalidate>
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title  %>
-  </div>
+    <%= form.text_field :title, 
+      class:"form-control" %>
+      <div class="valid-feedback">
+      Looks good!
+    </div>
+ </div>
+
+
 
   <div class="field">
     <%= form.label :description %>
@@ -45,7 +51,7 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class:'btn btn-dark' %>
   </div>
+</form>
 <% end %>
-
