--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
 
 
+
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand text-bg-dark p-3" href="/"><img src="/assets/favicon-nav.png"> Autoparts Market</a>
+    <a class="navbar-brand text-bg-dark p-3" href="/"><img src="/assets/favicon-nav.png" style="width:48px;height:48px;"> Autoparts Market</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -36,7 +37,7 @@
         </li>
         <% else %>
         <li class="nav-item">
-          <a class="btn text-bg-dark btn-secondary btn-padding-x:5" href="/users/sign_in">Sign In</a>
+          <a class="btn text-bg-dark btn-bd-primary btn-padding-x:5" href="/users/sign_in">Sign In</a>
         </li>
         <li class="nav-item">
           <a class="btn text-bg-dark btn-secondary btn-padding-x:5" href="/users/sign_up">Sign Up</a>
